--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,164 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_setting_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar_setting"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:fitsSystemWindows="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/ctoolbar_setting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar_setting"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                app:contentInsetStart="0dp"
-                app:layout_collapseMode="parallax" />
-
-            <ImageView
-                android:id="@+id/image_setting_back"
-                style="@style/BackArrow" />
-
-            <TextView
-                android:id="@+id/text_setting_title"
-                style="@style/AppbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginStart="48dp"
-                android:text="@string/text_setting_title" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+    <data>
+        <variable
+            name="vm"
+            type="com.example.mylibrary.view.setting.SettingViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_setting_innercontainer"
+        android:id="@+id/constraint_setting_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="48dp"
-        android:paddingHorizontal="32dp"
-        android:paddingVertical="24dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:fitsSystemWindows="true">
 
-        <TextView
-            android:id="@+id/text_setting_label_account"
-            style="@style/HeadBold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/text_setting_label_account"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar_setting"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:fitsSystemWindows="true"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/text_setting_email"
-            style="@style/SubHead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="32dp"
-            android:text="kwangddang11@naver.com"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_account"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_label_account" />
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/ctoolbar_setting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways">
 
-        <View
-            android:id="@+id/view_setting_divider1"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="24dp"
-            android:background="@color/divider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_email"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_email" />
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar_setting"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    app:contentInsetStart="0dp"
+                    app:layout_collapseMode="parallax" />
 
-        <TextView
-            android:id="@+id/text_setting_label_username"
-            style="@style/SubHead"
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:layout_marginTop="24dp"
-            android:gravity="center|start"
-            android:text="@string/text_setting_label_username"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_email"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_email" />
+                <ImageView
+                    android:id="@+id/image_setting_back"
+                    style="@style/BackArrow" />
 
-        <ImageView
-            android:id="@+id/image_setting_username"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:src="@drawable/ic_arrow_right"
-            app:layout_constraintBottom_toBottomOf="@id/text_setting_label_username"
-            app:layout_constraintEnd_toEndOf="@id/text_setting_label_username"
-            app:layout_constraintTop_toTopOf="@id/text_setting_label_username"
-            app:tint="@color/gray" />
+                <TextView
+                    android:id="@+id/text_setting_title"
+                    style="@style/AppbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="48dp"
+                    android:text="@string/text_setting_title" />
 
-        <View
-            android:id="@+id/view_setting_divider2"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/divider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_username"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_label_username" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
-            android:id="@+id/text_setting_label_logout"
-            style="@style/SubHead"
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:gravity="center|start"
-            android:text="@string/text_setting_label_logout"
-            app:layout_constraintBottom_toTopOf="@+id/text_setting_label_servicewithdrawal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_username" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_setting_innercontainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="48dp"
+            android:paddingHorizontal="32dp"
+            android:paddingVertical="24dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
 
-        <View
-            android:id="@+id/view_setting_divider3"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/divider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_logout"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_label_logout" />
+            <TextView
+                android:id="@+id/text_setting_label_account"
+                style="@style/HeadBold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/text_setting_label_account"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_setting_label_servicewithdrawal"
-            style="@style/SubHead"
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:layout_marginBottom="24dp"
-            android:gravity="center|start"
-            android:text="@string/text_setting_label_servicewithdrawal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_logout" />
+            <TextView
+                android:id="@+id/text_setting_email"
+                style="@style/SubHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="32dp"
+                android:text="@{vm.email}"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_account"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_label_account"
+                tools:text="kwangddang11@naver.com"/>
 
-        <View
-            android:id="@+id/view_setting_divider4"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/divider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_setting_label_servicewithdrawal"
-            app:layout_constraintTop_toBottomOf="@id/text_setting_label_servicewithdrawal" />
+            <View
+                android:id="@+id/view_setting_divider1"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="24dp"
+                android:background="@color/divider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_email"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_email" />
+
+            <TextView
+                android:id="@+id/text_setting_label_username"
+                style="@style/SubHead"
+                android:layout_width="0dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="24dp"
+                android:gravity="center|start"
+                android:text="@string/text_setting_label_username"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_email"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_email" />
+
+            <ImageView
+                android:id="@+id/image_setting_username"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_arrow_right"
+                app:layout_constraintBottom_toBottomOf="@id/text_setting_label_username"
+                app:layout_constraintEnd_toEndOf="@id/text_setting_label_username"
+                app:layout_constraintTop_toTopOf="@id/text_setting_label_username"
+                app:tint="@color/gray" />
+
+            <View
+                android:id="@+id/view_setting_divider2"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_username"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_label_username" />
+
+            <TextView
+                android:id="@+id/text_setting_label_logout"
+                style="@style/SubHead"
+                android:layout_width="0dp"
+                android:layout_height="64dp"
+                android:gravity="center|start"
+                android:text="@string/text_setting_label_logout"
+                app:layout_constraintBottom_toTopOf="@+id/text_setting_label_servicewithdrawal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_username" />
+
+            <View
+                android:id="@+id/view_setting_divider3"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_logout"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_label_logout" />
+
+            <TextView
+                android:id="@+id/text_setting_label_servicewithdrawal"
+                style="@style/SubHead"
+                android:layout_width="0dp"
+                android:layout_height="64dp"
+                android:layout_marginBottom="24dp"
+                android:gravity="center|start"
+                android:text="@string/text_setting_label_servicewithdrawal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_logout" />
+
+            <View
+                android:id="@+id/view_setting_divider4"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_setting_label_servicewithdrawal"
+                app:layout_constraintTop_toBottomOf="@id/text_setting_label_servicewithdrawal" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
